...
      }
    },
    "Abbrechen": {
      "localizations": {
        "en": {
...
      }
    },
    "Alle Videos": {
      "localizations": {
        "en": {
...
      }
    },
    "Als Nächstes": {
      "localizations": {
        "en": {
...
      }
    },
    "Einstellungen": {
      "localizations": {
        "en": {
...
      }
    },
    "Empfohlenes Video": {
      "localizations": {
        "en": {
...
      }
    },
    "Entfernen": {
      "localizations": {
        "en": {
...
      }
    },
    "Fertig": {
      "localizations": {
        "en": {
...
      }
    },
    "Gute Nacht!": {
      "localizations": {
        "en": {
...
      }
    },
    "Hinzufügen": {
      "localizations": {
        "en": {
...
      }
    },
    "Jetzt freigeben": {
      "localizations": {
        "en": {
...
      }
    },
    "Link kopieren": {
      "localizations": {
        "en": {
...
      }
    },
    "Name": {
      "localizations": {
        "en": {
...
      }
    },
    "Noch keine Kanäle": {
      "localizations": {
        "en": {
...
      }
    },
    "Noch nichts geschaut": {
      "localizations": {
        "en": {
...
      }
    },
    "PIN eingeben": {
      "localizations": {
        "en": {
...
      }
    },
    "PIN festlegen": {
      "localizations": {
        "en": {
...
      }
    },
    "PIN wiederholen": {
      "localizations": {
        "en": {
...
      }
    },
    "Profil anlegen": {
      "localizations": {
        "en": {
...
      }
    },
    "Prüfen": {
      "localizations": {
        "en": {
...
      }
    },
    "Schlafenszeit": {
      "localizations": {
        "en": {
...
      }
    },
    "Schlafmodus": {
      "localizations": {
        "en": {
...
      }
    },
    "Schlafmodus starten und in den Kindermodus": {
      "localizations": {
        "en": {
...
      }
    },
    "Scrollrad": {
      "localizations": {
        "en": {
...
      }
    },
    "Sichern": {
      "localizations": {
        "en": {
...
      }
    },
    "Sperren": {
      "localizations": {
        "en": {
...
      }
    },
    "Spielt": {
      "localizations": {
        "en": {
...
      }
    },
    "Videos": {
      "localizations": {
        "en": {
...
      }
    },
    "Weiterschauen": {
      "localizations": {
        "en": {
...
      }
    },
    "Whitelist ist leer": {
      "localizations": {
        "en": {
...
      }
    },
    "Wiedergabe unterbrochen": {
      "localizations": {
        "en": {
...
      }
    },
    "Zur Prüfung übernehmen (PIN)": {
      "localizations": {
        "en": {
...
      }
    },
    "https://www.youtube.com/…": {
      "localizations": {
        "en": {
...
      }
    },
    "Öffnen": {
      "localizations": {
        "en": {
...
